# kafka_rust

./: Cargo.toml  README.md
config/: server.conf
src/: consumer.rs  producer.rs  utils.rs
