[package]
name = "kafka_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.18.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
log = "0.4.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

[[bin]]
name = "consumer"
path = "src/consumer.rs"
[[bin]]
name = "producer"
path = "src/producer.rs"
